2006-05-27  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_typeinstance.c: New file.
	* src/rbgobj_type.c, src/rbgobject.c, rbgobj_param.c: separate
	some cInstantiatable stuffs into rbgobj_typeinstance.c.
	* src/global.h: ditto.

	* src/rbgobj_closure.c: Revert changes of 2006-04-15.
	We shouldn't use Data_Make_Struct in rclosure_marshal since
	this function could be called from arbitrary threads.
	* src/rbgobj_closure.c: simplify codes a bit.

	* src/rbgobject.c, src/rbgobj_value.c, rbgobject.h, src/glib2.def:
	Add new APIs:
	void rbgobj_gc_mark_instance(gpointer instance) and
	void rbgobj_gc_mark_gvalue(GValue* value).

	* src/rbgobject.c: Change to call `mark` and `free` functions of all
	associated cinfo (not only direct one).

	* src/rbgobj_object.c: Register mark procedure which marks
	each property value. So that each property value is protected from GC
	whenever the owner is alive.

	* src/rbgobj_param.c:
	Add rbgobj_get_value_from_param_spec_if_exist.

	* tests/test-glib2.rb (test_inheritance_and_gc): call GC.start.

2006-05-27  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib_maincontext.c: fixed idle/timeout callback memory leak.

	* src/rbgobject.c: added rbgobj_get_relative_removable.
	* src/rbgobject.h: ditto.
	* src/glib2.def: ditto.

	* src/rbglib_source.c: moved GLib::Source.remove to
	rbglib_maincontext.c

	* src/rbglib.c: initialize source before main_context.

2006-05-26  Sjoerd Simons <sjoerd@luon.net>

	* src/rbgobj_closure.c: Ensure that a signal handler in ruby is always run in
	a ruby native thread. This allows signals coming from non-ruby native threads
	to be handled correctly. Needs ruby configured with --enable-pthread to work
	(otherwise the behaviour isn't changed)

2006-05-26  Sjoerd Simons <sjoerd@luon.net>

	* src/rbglib.h, src/global.h: Move the 64 bit integer 
	util functions to the public header

2006-05-27  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>
